# OS_MAI_Slobodin

./: .gitignore  1.txt  2.txt  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
cp/: CMakeLists.txt  benchmark_five.cpp  benchmark_four.cpp  benchmark_three.cpp  benchmark_two.cpp  blockAllocator.hpp  freeListAllocator.hpp  main.cpp  plot_bench6.py  visualize_benchs.py
cp/doc/: КП_Слободин.docx
cp/src/: buddy_allocator.cpp  buddy_allocator.hpp  list_allocator.cpp  list_allocator.hpp  main.cpp
lab1/: CMakeLists.txt  main.cpp
lab1/doc/1/: 1.docx
lab1/include/: parent.h  utils.h
lab1/src/: child.cpp  child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/doc/2/: 2.docx
lab2/include/: summing.h
lab2/src/: summing.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/3/: 3.docx
lab3/include/: parent.h  utils.h
lab3/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab4/: CMakeLists.txt  program1.cpp  program2.cpp
lab4/doc/4/: 4.docx
lab4/include/: functions.h
lab4/src/: lib1.cpp  lib2.cpp
lab5-7/: CMakeLists.txt
lab5-7/doc/5-7/: 5-7.docx
lab5-7/include/: tree.hpp
lab5-7/src/: client.cpp  manage_zmq.cpp  server.cpp  tree.cpp
lab8/doc/8/: 8.docx
tests/: CMakeLists.txt  cp_test.cpp  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab567_test.cpp
